--- a/styles/css/style-aside.css
+++ b/styles/css/style-aside.css
@@ -1,10 +1,11 @@
 .menu {
   width: auto;
   height: auto;
+  z-index: 10;
 }
 .menu #nav-btn {
-  width: 4rem;
-  height: 4rem;
+  width: 7rem;
+  height: 7rem;
   display: flex;
   justify-content: center;
 }
@@ -17,7 +18,43 @@
   }
 }
 .menu #nav-menu {
-  display: none;
+  display: block;
+  width: 70vw;
+  background-color: #ccc;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+.menu #nav-menu .profile {
+  width: 100%;
+  height: 20vh;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.menu #nav-menu .profile img {
+  border-radius: 50%;
+  width: 5rem;
+  height: auto;
+  margin: 2rem 0.3rem;
+}
+.menu #nav-menu .nav {
+  width: 80%;
+  height: 50vh;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.menu #nav-menu .nav-item {
+  text-align: center;
+  margin-top: 1.5rem;
+}
+.menu #nav-menu .nav-item a {
+  display: block;
+  padding: 0.5rem;
+  text-decoration: none;
 }
 @media (min-width: 920px) {
   .menu #nav-menu {
@@ -38,8 +75,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    transition-duration: 1s;
-    transform-origin: 0% 0%;
   }
   .menu #nav-menu .profile img {
     border-radius: 50%;
