--- a/styles/sass/style-aside.sass
+++ b/styles/sass/style-aside.sass
@@ -5,11 +5,12 @@
 .menu
     width: auto
     height: auto
+    z-index: 10 
 
     // BOTÃO DO MOBILE
     #nav-btn
-        width: 4rem
-        height: 4rem
+        width: 7rem
+        height: 7rem
         
         display: flex
         justify-content: center
@@ -20,10 +21,53 @@
         
         @include responsive-mixin.desktop
             display: none
-
-    // ELEMENTOS DOS MENU
+    
     #nav-menu
-        display: none
+        display: block
+        width: 70vw
+        background-color: #ccc
+        box-sizing: border-box
+
+        display: flex
+        flex-direction: column
+        
+
+        .profile
+            width: 100%
+            height: 20vh
+            box-sizing: border-box
+
+            display: flex
+            flex-direction: column
+            align-items: center
+
+            img
+                border-radius: 50%
+                width: 5rem
+                height: auto
+                margin: 2rem .3rem
+        
+        .nav
+            width: 80%
+            height: 50vh
+            margin: 0 auto
+                
+            display: flex
+            flex-direction: column
+            align-items: center
+
+            
+            &-item
+                text-align: center
+                margin-top: 1.5rem
+
+                a
+                    display: block
+                    padding: .5rem
+                    text-decoration: none
+
+
+                    // ELEMENTOS DOS MENU
 
         @include responsive-mixin.desktop
             display: block
@@ -46,9 +90,6 @@
                 display: flex
                 flex-direction: column
                 align-items: center
-
-                transition-duration:1s
-                transform-origin: 0% 0% 
 
                 img
                     border-radius: 50%
