--- a/styles/css/mentorship-schedules.css
+++ b/styles/css/mentorship-schedules.css
@@ -1,5 +1,9 @@
 /*DESKTOP
-.first-larger-square {
+.mentorship-schedule-title {
+  text-align: left;
+}
+
+.main-first-larger-square {
   border: 10px;
   border-color: rgb(65, 14, 14);
   background-color: aqua;
@@ -8,27 +12,78 @@
 } 
 
 DESKTOP
-.second-larger-square {
+.second-square-info-calend {
   border: 10px;
   border-color: rgb(65, 14, 14);
   background-color: rgb(0, 255, 64);
   display: flex;
   flex-direction: column;
-}*/
+}
 
+.appointment-list-title-legend {
+  background-color: blue;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
-.first-larger-square {
+.legends {
+  background-color: rgb(0, 255, 136);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+*/
+
+/* MOBILE */
+.mentorship-schedule-title {
+  text-align: center;
+}
+
+.main-first-larger-square {
   border-color: rgb(65, 14, 14);
   display: flex;
   flex-direction: column-reverse;
 }
 
-.appointment {
+.first-square-appointment {
   background-color: rgb(8, 68, 68);
 }
 
-.second-larger-square {
+/* First line of first square with title and subtitles */
+.appointment-list-title-legend {
+  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.legends {
+  background-color: rgb(0, 255, 136);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.content-legend {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%; 
+  background-color: red;
+}
+
+/* Segundo quadrado do principal */
+.second-square-info-calend {
   background-color: rgb(0, 255, 64);
   display: flex;
   flex-direction: column-reverse;
+  align-items: center;
 }
